public enum ActionType
{
	NoneType,
	Translate,
	Rotate,
}