public enum EnvType
{
	NoneType,
	Temperature,
	Humidity,
}