@startuml overview
skinparam Linetype ortho

package Environment{
	abstract SensorUnit{
		- SensorInfo info
		+ Update(): void
		+ GetSensorInfo(): SensorInfo
	}
	class M5StickC{
		+ Update() : void
		- デシリアライズ() : void
	}
	class SerialHundler{
		+ Update() : void
		- シリアル通信() : void
	}
	class DummySensor{
		+ Update() : void
		- ダミーデータ生成 : void
	}
	struct SensorInfo{
		string deviceName
		float[] acceleration
		float[] gyro
		float temp
		float humidity
		float battery
	}
	object RealSensor

	RealSensor "*" <--- "1" SerialHundler : シリアルデータを取得
	SensorUnit "1" <|-- "1" M5StickC : 実装
	SensorUnit "1" <|-- "1" DummySensor : 実装
	SensorUnit "1" *-- "1" SensorInfo : 所持
	M5StickC "1" o--up- "1" SerialHundler : データを送信
}

enum EnvType{
	Temperature,
	Humidity,
}

package Evaluation{
	abstract Evaluate{
		+ EvaluateEnvironment() : Result
	}
	class ConcleteEvaluate{

	}
	abstract Result{
		int score
		string Message
		EnvType type
	}
	class ConcleteResult

	SensorUnit "*" <-- "1" Evaluate : 取得
	Evaluate "1" <-right-- "*" Result : 生成
	Evaluate "1" <|-down- "*" ConcleteEvaluate : 実装
	Result "1" <|-down- "*" ConcleteResult : 実装
	ConcleteEvaluate "1" <-right-- "*" ConcleteResult : 生成
	Evaluate -up-> EnvType
}

package Robot{
	abstract ActionGenerator{
		Result result
		+ GenerateAction(Result result) : Action
	}
	abstract Action{
		string actionName
		EnvType type
		double dist
		double deg
		double speed
		float actionTime
		+ Constructor(Result result)
	}
	note bottom of Action: actionTime = dist or deg / speed
	class ConcleteActionGenerator
	class ConcleteAction
	class ActionExucutor{
		Action[] actions
		+ SendAction(Action action)
	}
	class Toio{
		EnvType appointedType
		Cube toio
		CubeHandle handle
		+ Update()
		+ Exeaction(Action action): void
	}
	object RealToio
	enum ActionType{
		Translate,
		Rotate,
	}
	class JsonReader{
		+ ReadJson(string key): ActionData
	}
	object ActionDataSheet

	Result "*" <-- "1" ActionGenerator : 取得
	EnvType <-down- ActionGenerator
	ActionType <- ActionGenerator
	ActionDataSheet <-right- JsonReader
	JsonReader <-up- ActionGenerator
	ActionGenerator "1" <-right-- "*" Action : 生成
	ActionGenerator "1" <|-- "*" ConcleteActionGenerator : 実装
	Action "1" <|-- "*" ConcleteAction : 実装
	ConcleteActionGenerator "1" <-right-- "*" ConcleteAction : 生成
	Action "*" <-right-- "1" ActionExucutor
	ActionExucutor "1" <-right- "*" Toio
	Toio "1" <--- "1" RealToio : アクション実行
}
@enduml